TP-1041 fix flickering reset button

--- a/public/themes/custom/palvelumanuaali/components/05-pages/content-types/search.scss
+++ b/public/themes/custom/palvelumanuaali/components/05-pages/content-types/search.scss
@@ -105,7 +105,6 @@
       @extend .icon--small;
       margin: 12px 0 12px 0;
       background-size: contain;
-      display: none;
       background-image: url("/themes/custom/palvelumanuaali/images/icons/close.svg");
       background-repeat: no-repeat;
       background-position: center;
@@ -384,7 +383,7 @@
     display: flex;
     justify-content: space-between;
 
-    input[data-drupal-selector="edit-reset"] { 
+    input[data-drupal-selector="edit-reset"] {
       display: none;
     }
     .collapse-toggler,
